src/objects/User_Address__c.object
<CustomObject>
    <fields>
        <fullName>AddressLine1__c</fullName>
        <label>AddressLine1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine2__c</fullName>
        <label>AddressLine2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <label>CountryCode</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationName__c</fullName>
        <label>LocationName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>User Address</label>
    <nameField>
        <displayFormat>Add-{0000}</displayFormat>
        <label>Address No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Address</pluralLabel>
    <recordTypes>
        <fullName>Additional_Location</fullName>
        <active>true</active>
        <label>Additional Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Primary_Location</fullName>
        <active>true</active>
        <label>Primary Location</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>